<resources>
    <string name="app_name">EAT</string>

    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="name">Nome</string>
    <string name="lastname">Sobrenome</string>
    <string name="birthdate">Data de Nascimento</string>

    <string name="login">Entrar</string>
    <string name="forgot">Esqueci Minha Senha</string>
    <string name="register">Cadastrar</string>
    <string name="email">E-mail</string>
    <string name="recover">Recuperar Senha</string>
    <string name="toback">Voltar</string>
    <string name="recoverText">Digite o endereço de e-mail de recuperação de senha.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="ops">Ops</string>
    <string name="success_register">Cadastrado com sucesso</string>
    <string name="generic_register">Não conseguimos criar a sua conta. Tente novamente..</string>
    <string name="error">Algo deu errado. Tente novamente mais tarde.</string>
    <string name="ok">Ok</string>
    <string name="success">AêÊÊêê entrou!!!</string>

</resources>
